Fix: fix the navigation on mobile, change the picutre and resume

--- a/client/src/components/nav/nav.css
+++ b/client/src/components/nav/nav.css
@@ -150,7 +150,7 @@ header nav {
   -webkit-backdrop-filter: blur(9.6px);
   border: 1px solid rgba(0, 0, 0, 0.3);
   width: 100%;
-  top: -1000px;
+  top: -1200px;
   left: 0;
   height: 100svh;
   transition: 0.5s ease;
